# kamia-fitness

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  constraints.txt  docker-compose.yml  eslint.config.mjs  index.html  package-lock.json  package.json  setup.sh  tailwind.config.js  verify_resources.py  workspace.code-workspace
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: deploy.yml
backend/: Dockerfile  database.py  main.py  pyproject.toml  schemas.py
frontend/: Dockerfile
frontend/src/: App.js
infrastructure/cdk/: app.py  stack.py
